# double_cookie_dunk

./: .gitignore  README.md  pyproject.toml
src/whitelight/: __init__.py  broker_sim.py  cli.py  data.py  indicators.py  montecarlo.py  portfolio.py  position_sizing.py  registry.py  reports.py  strategy.py  synthetic.py
tests/: test_indicators.py  test_metrics.py  test_smoke_backtest.py  test_synthetic.py
